[package]
name = "distributed_databased"
version = "0.1.0"
authors = ["Igor Boyarshin <igor.boyarshin@gmail.com>"]
edition = "2018"
default-run = "new"

[dependencies]
# mongodb = { version = "1.1.1", default-features = false, features = ["tokio-runtime"] }
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
tokio = {"version"= "0.3.5", features=["full"]}
futures-util = "0.3.8"
futures = "0.3.8"
rand = "0.8.0"
rand_distr = "0.4.0"

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[[bin]]
name = "new"
path = "src/new.rs"
